--- a/delivery-food/package.json
+++ b/delivery-food/package.json
@@ -41,7 +41,10 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.16.0",
-    "eslint-plugin-react": "^7.30.0"
+    "eslint-plugin-react": "^7.30.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.0.24"
   }
 }
