--- a/delivery-food/package.json
+++ b/delivery-food/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.8.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
@@ -42,8 +43,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
-    "eslint": "^8.16.0",
-    "eslint-plugin-react": "^7.30.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24"
   }
