--- a/delivery-food/package.json
+++ b/delivery-food/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "sweetalert2": "^11.4.17",
     "thunk": "^0.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
