--- a/delivery-food-backend/package.json
+++ b/delivery-food-backend/package.json
@@ -31,15 +31,17 @@
         "express-joi-validation": "^5.0.1",
         "joi": "^17.6.0",
         "mongodb": "^4.0.1",
-        "nodemon": "^2.0.16",
+        "pg": "^8.7.3",
         "swagger-jsdoc": "^6.2.1",
         "swagger-ui-express": "^4.4.0"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
         "@types/node": "^16.4.7",
+        "@types/pg": "^8.6.5",
         "@types/swagger-jsdoc": "^6.0.1",
         "@types/swagger-ui-express": "^4.1.3",
+        "nodemon": "^2.0.16",
         "prettier": "^2.3.2",
         "ts-node-dev": "^1.1.8",
         "typescript": "^4.3.5"
