--- a/delivery-food-backend/package.json
+++ b/delivery-food-backend/package.json
@@ -34,6 +34,7 @@
         "express-joi-validation": "^5.0.1",
         "joi": "^17.6.0",
         "mongodb": "^4.0.1",
+        "morgan": "^1.10.0",
         "nodemon": "^2.0.16",
         "swagger-jsdoc": "^6.2.1",
         "swagger-ui-express": "^4.4.0"
@@ -41,6 +42,7 @@
     "devDependencies": {
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
+        "@types/morgan": "^1.9.3",
         "@types/node": "^16.4.7",
         "@types/swagger-jsdoc": "^6.0.1",
         "@types/swagger-ui-express": "^4.1.3",
