--- a/delivery-food-backend/package.json
+++ b/delivery-food-backend/package.json
@@ -26,19 +26,22 @@
     },
     "homepage": "https://github.com/mongodb-developer/mongodb-typescript-example#readme",
     "dependencies": {
-        "@types/pg": "^8.6.5",
+        "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-joi-validation": "^5.0.1",
         "joi": "^17.6.0",
         "mongodb": "^4.0.1",
+        "morgan": "^1.10.0",
         "nodemon": "^2.0.16",
         "pg": "^8.7.3",
         "swagger-jsdoc": "^6.2.1",
         "swagger-ui-express": "^4.4.0"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
+        "@types/morgan": "^1.9.3",
         "@types/node": "^16.4.7",
         "@types/pg": "^8.6.5",
         "@types/swagger-jsdoc": "^6.0.1",
