--- a/delivery-food/package.json
+++ b/delivery-food/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "daisyui": "^2.15.2",
     "firebase": "^9.8.2",
     "formik": "^2.2.9",
     "react": "^18.1.0",
