--- a/delivery-food-backend/package.json
+++ b/delivery-food-backend/package.json
@@ -1,9 +1,10 @@
 {
-    "name": "API REST delivery food",
+    "name": "API-REST-delivery-food",
     "version": "0.1.0",
     "description": "API for consumption of the aplication delivery food",
     "main": "dist/index.js",
     "scripts": {
+        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
         "build": "tsc",
         "buildrun": "npm run build && node dist/index.js",
         "dev": "nodemon -e ts --exec \"npm run buildrun\"",
@@ -13,6 +14,7 @@
         "type": "git",
         "url": "git+https://github.com/academia-geek/demo-day-projects-deliveryFood.git"
     },
+    "type": "module",
     "keywords": [
         "mongodb",
         "typescript",
@@ -21,7 +23,9 @@
     ],
     "license": "MIT licence",
     "dependencies": {
+        "@types/supertest": "^2.0.12",
         "cors": "^2.8.5",
+        "cross-env": "^7.0.3",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-joi-validation": "^5.0.1",
@@ -31,18 +35,22 @@
         "nodemon": "^2.0.16",
         "pg": "^8.7.3",
         "swagger-jsdoc": "^6.2.1",
-        "swagger-ui-express": "^4.4.0"
+        "swagger-ui-express": "^4.4.0",
+        "ts-jest": "^28.0.4"
     },
     "devDependencies": {
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
+        "@types/jest": "^28.1.1",
         "@types/morgan": "^1.9.3",
         "@types/node": "^16.4.7",
         "@types/pg": "^8.6.5",
         "@types/swagger-jsdoc": "^6.0.1",
         "@types/swagger-ui-express": "^4.1.3",
+        "jest": "^28.1.0",
         "nodemon": "^2.0.16",
         "prettier": "^2.3.2",
+        "supertest": "^6.2.3",
         "ts-node-dev": "^1.1.8",
         "typescript": "^4.3.5"
     }
