--- a/delivery-food-backend/tsconfig.json
+++ b/delivery-food-backend/tsconfig.json
@@ -18,7 +18,5 @@
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true
     },
-    "include": [
-        "src/**/*"
-    ]
+    "include": ["src/**/*"]
 }
