--- a/delivery-food-backend/tsconfig.json
+++ b/delivery-food-backend/tsconfig.json
@@ -9,6 +9,7 @@
         "outDir": "dist",
         "baseUrl": ".",
         "allowJs": true,
+        "rootDir": "src",
         "paths": {
             "*": [
                 "node_modules/*"
