--- a/delivery-food-frontend/delivery-admin/package.json
+++ b/delivery-food-frontend/delivery-admin/package.json
@@ -55,10 +55,14 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.3.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "simplebar": "^5.3.6",
     "simplebar-react": "^2.3.6",
+    "thunk": "^0.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
