--- a/delivery-food-backend/tsconfig.json
+++ b/delivery-food-backend/tsconfig.json
@@ -12,7 +12,9 @@
         "paths": {
             "*": ["node_modules/*"]
         },
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "experimentalDecorators": true /* Enables experimental support for ES7 decorators. */,
+        "emitDecoratorMetadata": true /* Enables experimental support for emitting type metadata for decorators. */
     },
     "include": ["src/**/*"]
 }
