--- a/delivery-food-backend/package.json
+++ b/delivery-food-backend/package.json
@@ -29,7 +29,6 @@
     "license": "MIT licence",
     "homepage": "https://github.com/academia-geek/demo-day-projects-deliveryFood/blob/main/README.md",
     "dependencies": {
-        "@types/pg": "^8.6.5",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
@@ -40,23 +39,24 @@
         "nodemon": "^2.0.16",
         "pg": "^8.7.3",
         "swagger-jsdoc": "^6.2.1",
-        "swagger-ui-express": "^4.4.0",
-        "ts-jest": "^28.0.4"
+        "swagger-ui-express": "^4.4.0"
     },
     "devDependencies": {
-        "@types/supertest": "^2.0.12",
+        "@types/cookiejar": "^2.1.2",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/jest": "^28.1.1",
         "@types/morgan": "^1.9.3",
         "@types/node": "^16.4.7",
         "@types/pg": "^8.6.5",
+        "@types/supertest": "^2.0.12",
         "@types/swagger-jsdoc": "^6.0.1",
         "@types/swagger-ui-express": "^4.1.3",
-        "jest": "^28.1.0",
+        "jest": "^28.1.1",
         "nodemon": "^2.0.16",
         "prettier": "^2.3.2",
         "supertest": "^6.2.3",
+        "ts-jest": "^28.0.4",
         "ts-node-dev": "^1.1.8",
         "typescript": "^4.3.5"
     }
