Ajuste Variable de SQL

--- a/delivery-food-backend/package.json
+++ b/delivery-food-backend/package.json
@@ -28,14 +28,19 @@
     "license": "MIT",
     "homepage": "https://github.com/academia-geek/demo-day-projects-deliveryFood/blob/main/README.md",
     "dependencies": {
+        "@types/axios": "^0.14.0",
+        "@types/pg": "^8.6.5",
+        "axios": "^0.27.2",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-joi-validation": "^5.0.1",
+        "geojson": "^0.5.0",
         "joi": "^17.6.0",
         "mongodb": "^4.0.1",
         "morgan": "^1.10.0",
         "nodemon": "^2.0.16",
+        "pg": "^8.7.3",
         "swagger-jsdoc": "^6.2.1",
         "swagger-ui-express": "^4.4.0"
     },
