--- a/delivery-food-frontend/delivery-food/package.json
+++ b/delivery-food-frontend/delivery-food/package.json
@@ -10,7 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
-    "daisyui": "^2.15.2",
+    "axios": "^0.27.2",
     "firebase": "^9.8.2",
     "formik": "^2.2.9",
     "react": "^18.1.0",
