--- a/delivery-food-frontend/delivery-food/package.json
+++ b/delivery-food-frontend/delivery-food/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "firebase": "^9.8.2",
     "formik": "^2.2.9",
+    "framer-motion-carousel": "^1.0.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-modal": "^3.15.1",
