--- a/delivery-food-backend/package.json
+++ b/delivery-food-backend/package.json
@@ -4,15 +4,22 @@
     "description": "Welcome to this delivery food API project",
     "main": "dist/index.js",
     "scripts": {
-        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
+        "test": "jest --coverage",
         "build": "tsc",
         "buildrun": "npm run build && node dist/index.js",
         "dev": "nodemon -e ts --exec \"npm run buildrun\"",
         "start": "npm run build && node dist/index.js"
     },
+    "jest": {
+      "transform": {
+        "^.+\\.[t|j]sx?$": "babel-jest"
+    }},
     "repository": {
         "type": "git",
         "url": "git+https://github.com/academia-geek/demo-day-projects-deliveryFood.git"
+    },
+    "engines": {
+        "node": ">=16.15.0"
     },
     "keywords": [
         "mongodb",
@@ -42,6 +49,7 @@
         "swagger-ui-express": "^4.4.0"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.18.2",
         "@types/cookiejar": "^2.1.2",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
@@ -52,6 +60,7 @@
         "@types/supertest": "^2.0.12",
         "@types/swagger-jsdoc": "^6.0.1",
         "@types/swagger-ui-express": "^4.1.3",
+        "babel-jest": "^28.1.1",
         "jest": "^28.1.1",
         "nodemon": "^2.0.16",
         "prettier": "^2.3.2",
