--- a/delivery-food-frontend/delivery-food/package.json
+++ b/delivery-food-frontend/delivery-food/package.json
@@ -17,11 +17,13 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-modal": "^3.15.1",
+    "react-modern-drawer": "^1.1.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "rsuite": "^5.15.0",
     "sweetalert2": "^11.4.17",
     "thunk": "^0.0.1",
     "web-vitals": "^2.1.4",
