--- a/delivery-food-backend/package.json
+++ b/delivery-food-backend/package.json
@@ -35,12 +35,18 @@
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-joi-validation": "^5.0.1",
+        "firebase": "^9.8.3",
+        "firebase-admin": "^10.3.0",
         "geojson": "^0.5.0",
+        "gps-distance": "^0.0.4",
         "joi": "^17.6.0",
         "mongodb": "^4.0.1",
         "morgan": "^1.10.0",
+        "node-geocoder": "^4.0.0",
         "nodemon": "^2.0.16",
         "pg": "^8.7.3",
+        "socket.io": "^4.5.1",
+        "socket.io-client": "^4.5.1",
         "swagger-jsdoc": "^6.2.1",
         "swagger-ui-express": "^4.4.0"
     },
