--- a/delivery-food-frontend/delivery-food/package.json
+++ b/delivery-food-frontend/delivery-food/package.json
@@ -16,6 +16,7 @@
     "framer-motion-carousel": "^1.0.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
     "react-modern-drawer": "^1.1.1",
     "react-redux": "^8.0.2",
