--- a/delivery-food-frontend/delivery-admin/package.json
+++ b/delivery-food-frontend/delivery-admin/package.json
@@ -44,6 +44,7 @@
     "@mui/material": "^5.6.1",
     "@testing-library/jest-dom": "^5.16.2",
     "apexcharts": "^3.35.0",
+    "axios": "^0.27.2",
     "change-case": "^4.1.2",
     "date-fns": "^2.28.0",
     "firebase": "^9.8.2",
