--- a/delivery-food-frontend/delivery-food/package.json
+++ b/delivery-food-frontend/delivery-food/package.json
@@ -6,6 +6,8 @@
     "@headlessui/react": "^1.6.3",
     "@heroicons/react": "^1.0.6",
     "@react-google-maps/api": "^2.12.0",
+    "@stripe/react-stripe-js": "^1.9.0",
+    "@stripe/stripe-js": "^1.32.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
