--- a/delivery-food-backend/package.json
+++ b/delivery-food-backend/package.json
@@ -41,6 +41,7 @@
         "geojson": "^0.5.0",
         "gps-distance": "^0.0.4",
         "joi": "^17.6.0",
+        "jwt-decode": "^3.1.2",
         "mongodb": "^4.0.1",
         "morgan": "^1.10.0",
         "node-geocoder": "^4.0.0",
